Clone a preset when creating a stroke's resources snapshot

Fixes T1870
BUG:360686